syntax = "proto3";

import "google/protobuf/empty.proto";

option go_package = "../grpc";

message Friend {
  int32 id = 1;
  string name = 2;
}

message Person {
  string _id = 1;
  int32 index = 2;
  string guid = 3;
  bool isActive = 4;
  string balance = 5;
  string picture = 6;
  int32 age = 7;
  string eyeColor = 8;
  string name = 9;
  string gender = 10;
  string company = 11;
  string  email = 12;
  string phone = 13;
  string address = 14;
  string about =15;
  string registered = 16;
  float latitude = 17;
  float longitude = 18;
  repeated string tags = 19;
  repeated Friend friends = 20;
  string  greeting = 21;
  string favouriteFruit = 22;
}

message Persons {
  repeated Person persons = 1;
}

service PersonService {
  rpc GetSmallRespponse(google.protobuf.Empty) returns (Persons) {};
  rpc GetMediumRespponse(google.protobuf.Empty) returns (Persons) {};
  rpc GeLaegeRespponse(google.protobuf.Empty) returns (Persons) {};
}